performed mean imputation and forward filling

--- a/energiDataProcessing.ipynb
+++ b/energiDataProcessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +315,7 @@
        "4            38.41         56.04  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,14 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -844,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -864,14 +857,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of missing values now is 401\n"
+      "Number of missing values now is: 401\n"
      ]
     }
    ],
@@ -883,7 +876,77 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we're going to perform a mean/median impution to remove the rest of the missing values, because they're numerical"
+    "Now we're going to perform a mean/median impution to remove the rest of the missing values, because they're numerical.\n",
+    "\n",
+    "For columns where missing values might not depend on time or where the values are relatively independent between time intervals, mean imputation is appropriate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "time                                           0\n",
+      "generation biomass                             0\n",
+      "generation fossil brown coal/lignite           0\n",
+      "generation fossil coal-derived gas             0\n",
+      "generation fossil gas                          0\n",
+      "generation fossil hard coal                    0\n",
+      "generation fossil oil                          0\n",
+      "generation fossil oil shale                    0\n",
+      "generation fossil peat                         0\n",
+      "generation geothermal                          0\n",
+      "generation hydro pumped storage consumption    0\n",
+      "generation hydro run-of-river and poundage     0\n",
+      "generation hydro water reservoir               0\n",
+      "generation marine                              0\n",
+      "generation nuclear                             0\n",
+      "generation other                               0\n",
+      "generation other renewable                     0\n",
+      "generation solar                               0\n",
+      "generation waste                               0\n",
+      "generation wind offshore                       0\n",
+      "generation wind onshore                        0\n",
+      "forecast solar day ahead                       0\n",
+      "forecast wind onshore day ahead                0\n",
+      "total load forecast                            0\n",
+      "total load actual                              0\n",
+      "price day ahead                                0\n",
+      "price actual                                   0\n",
+      "dtype: int64\n",
+      "Number of missing values now is: 0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_98302/3883726362.py:3: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "  data[columns_to_forward_fill] = data[columns_to_forward_fill].fillna(method='ffill')\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "columns_to_forward_fill = ['time', 'generation biomass', 'generation fossil brown coal/lignite', 'generation fossil coal-derived gas', 'generation fossil gas', 'generation fossil hard coal', 'generation fossil oil', 'generation fossil oil shale', 'generation fossil peat', 'generation geothermal', 'generation hydro pumped storage consumption', 'generation hydro run-of-river and poundage', 'generation hydro water reservoir', 'generation marine', 'generation nuclear', 'generation other', 'generation other renewable', 'generation solar', 'generation waste', 'generation wind onshore', 'forecast solar day ahead', 'forecast wind onshore day ahead', \"generation wind offshore\"]  \n",
+    "\n",
+    "data[columns_to_forward_fill] = data[columns_to_forward_fill].fillna(method='ffill')\n",
+    "\n",
+    "columns_to_mean_impute = [\n",
+    "    'total load actual',\n",
+    "    'price actual'\n",
+    "]\n",
+    "\n",
+    "data[columns_to_mean_impute] = data[columns_to_mean_impute].fillna(data.mean(numeric_only=True))\n",
+    "\n",
+    "print(data.isna().sum())\n",
+    "\n",
+    "print(\"Number of missing values now is:\", pd.isnull(data).sum().sum())"
    ]
   }
  ],
