--- a/dataProcessing.ipynb
+++ b/dataProcessing.ipynb
@@ -29,7 +29,9 @@
     "pd.set_option('display.max_rows', None)\n",
     "pd.set_option('display.max_columns', None)\n",
     "data_weather = pd.read_csv(\"spanish-cities-energy-consumption/weather_features.csv\")\n",
-    "data_generation = pd.read_csv(\"spanish-cities-energy-consumption/energy_dataset.csv\")\n"
+    "data_generation = pd.read_csv(\"spanish-cities-energy-consumption/energy_dataset.csv\")\n",
+    "data_weather['dt_iso'] = pd.to_datetime(data_weather['dt_iso'])\n",
+    "data_generation['time'] = pd.to_datetime(data_generation['time'])\n"
    ]
   },
   {
@@ -81,7 +83,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_generation.drop(columns=[\"generation fossil coal-derived gas\", \"generation fossil oil shale\",\"generation fossil peat\", \"generation geothermal\", \"generation marine\", \"generation wind offshore\" ], inplace=True)"
+    "data_generation.drop(columns=[\"generation fossil coal-derived gas\",\n",
+    "                              \"generation hydro pumped storage aggregated\", \n",
+    "                              \"generation fossil oil shale\",\n",
+    "                              \"generation fossil peat\", \n",
+    "                              \"generation geothermal\", \n",
+    "                              \"generation marine\", \n",
+    "                              \"generation wind offshore\",\n",
+    "                              \"forecast wind offshore eday ahead\" ], inplace=True)"
    ]
   },
   {
@@ -147,6 +156,77 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def visualData(data, time):\n",
+    "   for col in data.columns:\n",
+    "        print(col)\n",
+    "     # Plot Histogram of Z-scores\n",
+    "        plt.figure(figsize=(12, 5))\n",
+    "\n",
+    "        # Histogram plot\n",
+    "        plt.subplot(1, 2, 1)\n",
+    "        plt.hist(data[col], bins=100, edgecolor='k', alpha=0.7)\n",
+    "        plt.title(f'Histogram of values {col}')\n",
+    "        plt.xlabel('value')\n",
+    "        plt.ylabel('Frequency')\n",
+    "        plt.legend()\n",
+    "\n",
+    "        # Scatter Plot with Z-scores\n",
+    "        plt.subplot(1, 2, 2)\n",
+    "        plt.scatter(time, data[col], alpha=0.7)\n",
+    "        plt.title(f'Scatter Plot of values over time {col}')\n",
+    "        plt.xlabel('time')\n",
+    "        plt.ylabel('value')\n",
+    "        plt.grid(True)\n",
+    "\n",
+    "        plt.tight_layout()\n",
+    "        plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "visualData(data=weather_num, time=data_weather['dt_iso'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "visualData(data=generation_num, time=data_generation['time'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#weather dataset\n",
+    "normal_weather_columns=[\"temp\", 'temp_min', 'temp_max', 'pressure', 'clouds_all']\n",
+    "skewed_weather_columns=['humidity', 'wind_speed', 'wind_deg', 'rain_1h', 'rain_3h', 'snow_3h']\n",
+    "\n",
+    "#energy dataset\n",
+    "\n",
+    "normal_energy_columns=['generation biomass', 'generation fossil hard coal', 'generation fossil oil',\n",
+    "                        'generation other', 'generation other renewable', 'total load forecast','total load actual',\n",
+    "                         'price day ahead', 'price actual']\n",
+    "skewed_energy_columns=['generation fossil brown coal/lignite', 'generation fossil gas','generation hydro pumped storage consumption',\n",
+    "                        'generation hydro run-of-river and poundage', 'generation hydro water reservoir', 'generation nuclear',\n",
+    "                         'generation solar', 'generation waste', 'generation wind onshore',\n",
+    "                           'forecast solar day ahead', 'forecast wind onshore day ahead']"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -168,9 +248,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "\n",
-    "generation_num.drop(columns=[\"generation hydro pumped storage aggregated\", \"forecast wind offshore eday ahead\"], inplace=True)\n",
     "\n",
     "columns_to_median_impute = [\n",
     "    'total load actual',\n",
@@ -190,7 +275,16 @@
     "    'generation wind onshore'\n",
     "]\n",
     "\n",
+    "columns_to_median_impute=['generation fossil brown coal/lignite', 'generation fossil gas','generation hydro pumped storage consumption',\n",
+    "                        'generation hydro run-of-river and poundage', 'generation hydro water reservoir', 'generation nuclear',\n",
+    "                         'generation solar', 'generation waste', 'generation wind onshore']\n",
+    "\n",
+    "columns_to_mean_impute=['generation biomass', 'generation fossil hard coal', 'generation fossil oil',\n",
+    "                        'generation other', 'generation other renewable', 'total load actual']\n",
+    "\n",
     "generation_num[columns_to_median_impute] = generation_num[columns_to_median_impute].fillna(generation_num.median(numeric_only=True))\n",
+    "generation_num[columns_to_mean_impute] = generation_num[columns_to_mean_impute].fillna(generation_num.mean(numeric_only=True))\n",
+    "\n",
     "\n",
     "print(generation_num.isna().sum())\n",
     "\n",
@@ -206,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,13 +313,13 @@
     "    outliers = (z_scores > threshold) | (z_scores < -threshold)\n",
     "    return outliers, z_scores\n",
     "\n",
-    "weather_outliers, weather_zscores = Zscore(weather_num)\n",
-    "generation_outliers, generation_zscore = Zscore(generation_num)"
+    "weather_outliers, weather_zscores = Zscore(weather_num[normal_weather_columns])\n",
+    "generation_outliers, generation_zscore = Zscore(generation_num[normal_energy_columns])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,6 +349,8 @@
     "        plt.ylabel('Z-score')\n",
     "        plt.grid(True)\n",
     "\n",
+    "        \n",
+    "\n",
     "        # Highlight outliers\n",
     "        for i, (score, is_outlier) in enumerate(zip(z_scores[col], outliers)):\n",
     "            if is_outlier:\n",
@@ -266,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +386,57 @@
     "        outliers = df[(df[feature] < lower_bound) | (df[feature] > upper_bound)]\n",
     "        outliers_dict[feature] = outliers\n",
     "        \n",
-    "    return outliers_dict\n"
+    "    return outliers_dict, lower_bounds, upper_bounds\n",
+    "\n",
+    "weather_iqr, weather_lower_bound, weather_upper_bound = IQR(weather_num[skewed_weather_columns])\n",
+    "generation_iqr, generation_lower_bound, generation_upper_bound = IQR(generation_num[skewed_energy_columns])\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def visualIQR(data, lower_bound, upper_bound):\n",
+    "    for col in data.columns:\n",
+    "        # Plot Histogram of Z-scores\n",
+    "        plt.figure(figsize=(12, 5))\n",
+    "\n",
+    "        # Histogram plot\n",
+    "        plt.subplot(1, 2, 1)\n",
+    "        plt.hist(data[col], bins=100, color='lightblue', edgecolor='black', alpha=0.7)\n",
+    "        plt.axvline(x=lower_bound[col], color='r', linestyle='--', label=f'Lower Bound ({lower_bound[col]})')\n",
+    "        plt.axvline(x=upper_bound[col], color='g', linestyle='--', label=f'Upper Bound ({upper_bound[col]})')\n",
+    "\n",
+    "        # Customize plot\n",
+    "        plt.xlabel('Value')\n",
+    "        plt.ylabel('Frequency')\n",
+    "        plt.yscale('log')\n",
+    "        plt.title(f'Histogram with IQR Boundaries {col}')\n",
+    "        plt.legend()\n",
+    "\n",
+    "        # Scatter Plot with Z-scores\n",
+    "        plt.subplot(1, 2, 2)\n",
+    "        plt.scatter(range(len(data[col])), data[col], label='Data Points', color='b')\n",
+    "        plt.axhline(y=lower_bound[col], color='r', linestyle='--', label=f'Lower Bound ({lower_bound[col]})')\n",
+    "        plt.axhline(y=upper_bound[col], color='g', linestyle='--', label=f'Upper Bound ({upper_bound[col]})')\n",
+    "\n",
+    "        # Marking outliers\n",
+    "        outliers = data[(data[col] < lower_bound[col]) | (data[col] > upper_bound[col])]\n",
+    "        plt.scatter(np.where((data[col] < lower_bound[col]) | (data[col] > upper_bound[col]))[0], outliers[col], color='r', label='Outliers')\n",
+    "\n",
+    "        # Customize plot\n",
+    "        plt.xlabel('Index')\n",
+    "        plt.ylabel('Value')\n",
+    "        plt.title(f'Scatter Plot with IQR Boundaries and Outliers {col}')\n",
+    "        plt.legend()\n",
+    "        \n",
+    "\n",
+    "\n",
+    "        plt.tight_layout()\n",
+    "        plt.show()"
    ]
   },
   {
@@ -299,10 +445,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import seaborn as sns\n",
-    "for col in generation_num.columns:\n",
-    "    sns.boxplot(data=generation_num[col])\n",
-    "    plt.show()"
+    "visualIQR(data=weather_num[skewed_weather_columns], lower_bound=weather_lower_bound, upper_bound=weather_upper_bound)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "visualIQR(data=generation_num[skewed_energy_columns], lower_bound=generation_lower_bound, upper_bound=generation_upper_bound)"
    ]
   },
   {
@@ -321,6 +473,102 @@
    "outputs": [],
    "source": [
     "visualZscore(z_scores=generation_zscore, outliers=generation_outliers)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Handling of outliers**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#weather dataset\n",
+    "\n",
+    "cap_weather_columns=[\"temp\", 'temp_min', 'temp_max', 'pressure', 'humidity', 'wind_speed', 'rain_1h', 'snow_3h']\n",
+    "remove_weather_columns=[]\n",
+    "transform_weather_columns=['rain_3h']\n",
+    "\n",
+    "#cap rain at a different threshold \n",
+    "\n",
+    "#energy dataset\n",
+    "\n",
+    "normal_energy_columns=['generation biomass', 'generation fossil hard coal', 'generation fossil oil',\n",
+    "                        'generation other', 'generation other renewable', 'total load forecast','total load actual',\n",
+    "                         'price day ahead', 'price actual']\n",
+    "skewed_energy_columns=['generation fossil brown coal/lignite', 'generation fossil gas','generation hydro pumped storage consumption',\n",
+    "                        'generation hydro run-of-river and poundage', 'generation hydro water reservoir', 'generation nuclear',\n",
+    "                         'generation solar', 'generation waste', 'generation wind onshore',\n",
+    "                           'forecast solar day ahead', 'forecast wind onshore day ahead']\n",
+    "\n",
+    "cap_energy_columns=['generation fossil oil', 'generation nuclear', 'generation other renewable','generation waste', 'generation wind onshore']\n",
+    "remove_energy_columns=['generation biomass']\n",
+    "transform_energy_columns=['generation fossil gas','generation hydro pumped storage consumption','generation hydro water reservoir' ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#capping\n",
+    "for col in weather_num[cap_weather_columns].columns:\n",
+    "    if col in skewed_weather_columns:\n",
+    "        if col == 'rain_1h':\n",
+    "            weather_num[col] = np.clip(weather_num[col], weather_lower_bound[col], 3)\n",
+    "        else:\n",
+    "            weather_num[col] = np.clip(weather_num[col], weather_lower_bound[col], weather_upper_bound[col])\n",
+    "    else:\n",
+    "        mean = np.mean(weather_num[col])\n",
+    "        std_dev = np.std(weather_num[col])\n",
+    "        lower_bound = mean - (3 * std_dev)\n",
+    "        upper_bound = mean + (3 * std_dev)\n",
+    "        weather_num[col] = np.clip(weather_num[col], lower_bound, upper_bound)\n",
+    "\n",
+    "#log-transform\n",
+    "for col in weather_num[transform_weather_columns].columns:\n",
+    "    weather_num[col] = np.log1p(weather_num[col])\n",
+    "\n",
+    "#capping\n",
+    "for col in generation_num[cap_energy_columns].columns:\n",
+    "    if col in skewed_energy_columns:\n",
+    "        generation_num[col] = np.clip(generation_num[col], generation_lower_bound[col], generation_upper_bound[col])\n",
+    "    else:\n",
+    "        mean = np.mean(generation_num[col])\n",
+    "        std_dev = np.std(generation_num[col])\n",
+    "        lower_bound = mean - (3 * std_dev)\n",
+    "        upper_bound = mean + (3 * std_dev)\n",
+    "        generation_num[col] = np.clip(generation_num[col], lower_bound, upper_bound)\n",
+    "\n",
+    "#log-transform\n",
+    "for col in generation_num[transform_energy_columns].columns:\n",
+    "    generation_num[col] = np.log1p(generation_num[col])\n",
+    "\n",
+    "#remove\n",
+    "#print(generation_outliers[remove_energy_columns])\n",
+    "true_indexes = generation_outliers[generation_outliers['generation biomass'] == True].index\n",
+    "\n",
+    "print(true_indexes)\n",
+    "\n",
+    "generation_num.drop(true_indexes, inplace=True)\n",
+    "data_generation.drop(true_indexes, inplace=True)\n",
+    "generation_num.reset_index(drop=True, inplace=True)\n",
+    "data_generation.reset_index(drop=True, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "visualData(data=generation_num, time=data_generation['time'])"
    ]
   }
  ],
