small fixes, encoding, and splitting

--- a/dataProcessing.ipynb
+++ b/dataProcessing.ipynb
@@ -139,7 +139,9 @@
    "source": [
     "#Divide the numerical features from the categorical features\n",
     "weather_num = data_weather.select_dtypes(include='number')\n",
+    "weather_num.drop('weather_id', axis=1, inplace=True)\n",
     "weather_cat = data_weather.select_dtypes(exclude='number').drop('dt_iso', axis=1)\n",
+    "weather_cat['weather_id']=data_weather['weather_id']\n",
     "generation_num = data_generation.select_dtypes(include='number')"
    ]
   },
@@ -212,8 +214,8 @@
    "outputs": [],
    "source": [
     "#weather dataset\n",
-    "normal_weather_columns=[\"temp\", 'temp_min', 'temp_max', 'pressure', 'clouds_all']\n",
-    "skewed_weather_columns=['humidity', 'wind_speed', 'wind_deg', 'rain_1h', 'rain_3h', 'snow_3h']\n",
+    "normal_weather_columns=[\"temp\", 'temp_min', 'temp_max', 'pressure']\n",
+    "skewed_weather_columns=['humidity', 'wind_speed', 'wind_deg', 'rain_1h', 'rain_3h', 'snow_3h', 'clouds_all']\n",
     "\n",
     "#energy dataset\n",
     "\n",
@@ -257,23 +259,6 @@
    "outputs": [],
    "source": [
     "\n",
-    "columns_to_median_impute = [\n",
-    "    'total load actual',\n",
-    "    'generation biomass', \n",
-    "    'generation fossil brown coal/lignite', \n",
-    "    'generation fossil gas', \n",
-    "    'generation fossil hard coal', \n",
-    "    'generation fossil oil',  \n",
-    "    'generation hydro pumped storage consumption', \n",
-    "    'generation hydro run-of-river and poundage', \n",
-    "    'generation hydro water reservoir', \n",
-    "    'generation nuclear', \n",
-    "    'generation other', \n",
-    "    'generation other renewable', \n",
-    "    'generation solar', \n",
-    "    'generation waste', \n",
-    "    'generation wind onshore'\n",
-    "]\n",
     "\n",
     "columns_to_median_impute=['generation fossil brown coal/lignite', 'generation fossil gas','generation hydro pumped storage consumption',\n",
     "                        'generation hydro run-of-river and poundage', 'generation hydro water reservoir', 'generation nuclear',\n",
@@ -569,6 +554,30 @@
    "outputs": [],
    "source": [
     "visualData(data=generation_num, time=data_generation['time'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_encoded = pd.get_dummies(weather_cat, columns=weather_cat.columns)\n",
+    "df_encoded = df_encoded.astype(int)\n",
+    "df_encoded.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = weather_num.drop('wind_deg', axis=1)  # Features\n",
+    "y = weather_num['wind_deg']  \n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "print(\"Training set shape:\", X_train.shape, y_train.shape)\n",
+    "print(\"Testing set shape:\", X_test.shape, y_test.shape)"
    ]
   }
  ],
