fix: cell_hog method

--- a/HOG-features/HOG_notebook.ipynb
+++ b/HOG-features/HOG_notebook.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
-    "\n",
+    "# Imports\n",
     "import HOG_methods as hogg\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -41,16 +41,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1265cc190>"
+       "<matplotlib.image.AxesImage at 0x13359fd30>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -80,16 +80,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1265848e0>"
+       "<matplotlib.image.AxesImage at 0x137ae5690>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -121,9 +121,9 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[19], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# creating hog features \u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m \u001b[43mhogg\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mhog\u001b[49m\u001b[43m(\u001b[49m\u001b[43mresized_img\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m8\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m8\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m9\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/Desktop/IT3212 - Datadrevet Programvare/IT3212/HOG-features/HOG_methods.py:83\u001b[0m, in \u001b[0;36mhog\u001b[0;34m(img, cell_size, block_size, nbins)\u001b[0m\n\u001b[1;32m     81\u001b[0m                 cell_mag \u001b[38;5;241m=\u001b[39m mag[i\u001b[38;5;241m*\u001b[39mcell_h:(i\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m)\u001b[38;5;241m*\u001b[39mcell_h, j\u001b[38;5;241m*\u001b[39mcell_w:(j\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m)\u001b[38;5;241m*\u001b[39mcell_w]\n\u001b[1;32m     82\u001b[0m                 cell_ang \u001b[38;5;241m=\u001b[39m ang[i\u001b[38;5;241m*\u001b[39mcell_h:(i\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m)\u001b[38;5;241m*\u001b[39mcell_h, j\u001b[38;5;241m*\u001b[39mcell_w:(j\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m)\u001b[38;5;241m*\u001b[39mcell_w]\n\u001b[0;32m---> 83\u001b[0m                 hog_img[i, j, k, l, :] \u001b[38;5;241m=\u001b[39m \u001b[43mcell_hog\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcell_mag\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcell_ang\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcell_size\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnbins\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     85\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m img, mag, hog_img\n",
-      "File \u001b[0;32m~/Desktop/IT3212 - Datadrevet Programvare/IT3212/HOG-features/HOG_methods.py:27\u001b[0m, in \u001b[0;36mcell_hog\u001b[0;34m(mag, ang, cell_size, nbins)\u001b[0m\n\u001b[1;32m     24\u001b[0m magnitude \u001b[38;5;241m=\u001b[39m mag[i, j]\n\u001b[1;32m     26\u001b[0m \u001b[38;5;66;03m# Compute bin index\u001b[39;00m\n\u001b[0;32m---> 27\u001b[0m bin_index \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mangle\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m/\u001b[39;49m\u001b[43m \u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpi\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m/\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mnbins\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     29\u001b[0m \u001b[38;5;66;03m# Update histogram\u001b[39;00m\n\u001b[1;32m     30\u001b[0m hog_cell[bin_index] \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m magnitude\n",
+      "Cell \u001b[0;32mIn[23], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# creating hog features \u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m \u001b[43mhogg\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mhog\u001b[49m\u001b[43m(\u001b[49m\u001b[43mresized_img\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m8\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m8\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m9\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/Desktop/IT3212 - Datadrevet Programvare/IT3212/HOG-features/HOG_methods.py:89\u001b[0m, in \u001b[0;36mhog\u001b[0;34m(img, cell_size, block_size, nbins)\u001b[0m\n\u001b[1;32m     83\u001b[0m                 cell_mag \u001b[38;5;241m=\u001b[39m mag[\n\u001b[1;32m     84\u001b[0m                     i \u001b[38;5;241m*\u001b[39m cell_h : (i \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m) \u001b[38;5;241m*\u001b[39m cell_h, j \u001b[38;5;241m*\u001b[39m cell_w : (j \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m) \u001b[38;5;241m*\u001b[39m cell_w\n\u001b[1;32m     85\u001b[0m                 ]\n\u001b[1;32m     86\u001b[0m                 cell_ang \u001b[38;5;241m=\u001b[39m ang[\n\u001b[1;32m     87\u001b[0m                     i \u001b[38;5;241m*\u001b[39m cell_h : (i \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m) \u001b[38;5;241m*\u001b[39m cell_h, j \u001b[38;5;241m*\u001b[39m cell_w : (j \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m) \u001b[38;5;241m*\u001b[39m cell_w\n\u001b[1;32m     88\u001b[0m                 ]\n\u001b[0;32m---> 89\u001b[0m                 hog_img[i, j, k, l, :] \u001b[38;5;241m=\u001b[39m \u001b[43mcell_hog\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m     90\u001b[0m \u001b[43m                    \u001b[49m\u001b[43mcell_mag\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcell_ang\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcell_size\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnbins\u001b[49m\n\u001b[1;32m     91\u001b[0m \u001b[43m                \u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     93\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m img, mag_normalized, hog_img\n",
+      "File \u001b[0;32m~/Desktop/IT3212 - Datadrevet Programvare/IT3212/HOG-features/HOG_methods.py:28\u001b[0m, in \u001b[0;36mcell_hog\u001b[0;34m(mag, ang, cell_size, nbins)\u001b[0m\n\u001b[1;32m     25\u001b[0m magnitude \u001b[38;5;241m=\u001b[39m mag[i, j]\n\u001b[1;32m     27\u001b[0m \u001b[38;5;66;03m# Compute bin index\u001b[39;00m\n\u001b[0;32m---> 28\u001b[0m bin_index \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mangle\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m/\u001b[39;49m\u001b[43m \u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpi\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m/\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mnbins\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     30\u001b[0m \u001b[38;5;66;03m# Update histogram\u001b[39;00m\n\u001b[1;32m     31\u001b[0m hog_cell[bin_index] \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m magnitude\n",
       "\u001b[0;31mTypeError\u001b[0m: only length-1 arrays can be converted to Python scalars"
      ]
     }
