--- a/fouriertransform.ipynb
+++ b/fouriertransform.ipynb
@@ -66,7 +66,7 @@
     "#magnitude_spectrum = (torch.abs(f_transform_shifted) + 1e-10)\n",
     "\n",
     "plt.figure(figsize=(6, 6))\n",
-    "plt.imshow(magnitude_spectrum.squeeze(), cmap='gray')\n",
+    "plt.imshow(magnitude_spectrum.squeeze())\n",
     "plt.title('Magnitude Spectrum (Frequency Domain)')\n",
     "plt.axis('off')\n",
     "plt.show()\n"
@@ -111,7 +111,7 @@
     "\n",
     "plt.subplot(1, 3, 2)\n",
     "plt.title('filtered transform')\n",
-    "plt.imshow(magnitude_spectrum_filtered.squeeze(), cmap='gray')\n",
+    "plt.imshow(magnitude_spectrum_filtered.squeeze())\n",
     "\n",
     "plt.subplot(1, 3, 3)\n",
     "plt.title('Low-Pass Filtered Image')\n",
@@ -159,7 +159,7 @@
     "\n",
     "plt.subplot(1, 3, 2)\n",
     "plt.title('filtered transform')\n",
-    "plt.imshow(magnitude_spectrum_filtered.squeeze(), cmap='gray')\n",
+    "plt.imshow(magnitude_spectrum_filtered.squeeze())\n",
     "\n",
     "plt.subplot(1, 3, 3)\n",
     "plt.title('High-Pass Filtered Image')\n",
